big changes, getting the front end working, scripting, etc.

--- a/TODO
+++ b/TODO
@@ -1,1 +1,3 @@
 - migrate seed.rb to external YAML file
+- add support for giving songs "alternative keys" for sometimes playing
+- multiple time signatures within song?
